# GuessTheEpisode

./: .gitignore  README.md  pyproject.toml
gte/: db.py  gte_game.py  images.py  main.py  models.py
scripts/: add_show.py  host_images.py
